fix logo layout bug

--- a/projects/wyze-presentation/style.css
+++ b/projects/wyze-presentation/style.css
@@ -48,7 +48,7 @@
 }
 
 #logo-container {
-    max-width: 230px;
+    max-width: 231px;
     display: block;
     margin: auto;
     margin-top: 30px;
